<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>kirchhof</groupId>
    <artifactId>test-ci</artifactId>
    <version>1.0-SNAPSHOT</version>

    <!-- == PROPERTIES ================================================= -->

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <maven.compiler.version>3.6.1</maven.compiler.version>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>

        <log4j.version>2.8.2</log4j.version>
        <guava.version>21.0</guava.version>

        <maven.build.helper.version>3.0.0</maven.build.helper.version>

        <junit.jupiter.version>5.0.3</junit.jupiter.version>
        <junit.vintage.version>4.12.3</junit.vintage.version>
        <junit.platform.version>1.0.3</junit.platform.version>
        <assertj.version>3.7.0</assertj.version>
        <equalsverifier.version>2.2.2</equalsverifier.version>
        <mockito.version>2.7.22</mockito.version>
        <quicktheories.version>0.14</quicktheories.version>

        <surefire.version>2.19.1</surefire.version>
        <failsafe.version>2.19.1</failsafe.version>
    </properties>

    <!-- == DEPENDENCIES ================================================= -->

    <dependencyManagement>
        <dependencies>

            <!-- Logging -->
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-core</artifactId>
                <version>${log4j.version}</version>
            </dependency>

            <!-- Common Library -->
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
                <!-- doc: https://github.com/google/guava -->
            </dependency>

            <!-- Testing -->
            <dependency>
                <groupId>nl.jqno.equalsverifier</groupId>
                <artifactId>equalsverifier</artifactId>
                <version>${equalsverifier.version}</version>
                <scope>test</scope>
                <!-- doc: http://jqno.nl/equalsverifier/ -->
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>${mockito.version}</version>
                <scope>test</scope>
                <!-- doc: http://site.mockito.org/ -->
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-params</artifactId>
                <version>${junit.jupiter.version}</version>
                <scope>test</scope>
                <!-- doc: http://junit.org/junit5/docs/current/user-guide/#writing-tests-parameterized-tests -->
            </dependency>
            <dependency>
                <groupId>org.quicktheories</groupId>
                <artifactId>quicktheories</artifactId>
                <version>${quicktheories.version}</version>
                <scope>test</scope>
                <!-- doc: https://github.com/ncredinburgh/QuickTheories -->
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>

        <!-- Testing -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.jupiter.version}</version>
            <scope>test</scope>
            <!-- doc: http://junit.org/junit5/ -->
        </dependency>
        <dependency>
            <groupId>org.junit.vintage</groupId>
            <artifactId>junit-vintage-engine</artifactId>
            <version>${junit.vintage.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${assertj.version}</version>
            <!-- doc: http://joel-costigliola.github.io/assertj/ -->
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>5.0.3</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <!-- == BUILD ================================================= -->

    <build>
        <plugins>
            <!-- Unit Tests -->
            <!-- default folder is src/test/java/ -->
            <!-- default incl. are "**/Test*.java", "**/*Test.java", "**/*TestCase.java" -->
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surefire.version}</version>
                <configuration>
                    <argLine>-Xmx1024m -Xms1024m -XX:MaxPermSize=512m -Djdk.net.URLClassPath.disableClassPathURLCheck=true</argLine>
                    <skipTests>${skip.unit.tests}</skipTests>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.junit.platform</groupId>
                        <artifactId>junit-platform-surefire-provider</artifactId>
                        <version>${junit.platform.version}</version>
                    </dependency>
                </dependencies>
            </plugin>

            <!-- Integration / Acceptance Tests -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>${failsafe.version}</version>
                <configuration>
                    <skipTests>${skip.integration.tests}</skipTests>
                    <includes>
                        <!-- Integration Tests -->
                        <!-- default folder is src/integration-test/java/ -->
                        <!-- default incl. are "**/IT*.java", "**/*IT.java", "**/*ITCase.java" -->
                        <include>**/IT*.java</include>
                        <include>**/*IT.java</include>
                        <include>**/*ITCase.java</include>
                        <!-- Acceptance Tests -->
                        <!-- default folder is src/acceptance-test/java/ -->
                        <!-- default incl. are "**/AT*.java", "**/*AT.java", "**/*ATCase.java" -->
                        <include>**/AT*.java</include>
                        <include>**/*AT.java</include>
                        <include>**/*ATCase.java</include>
                    </includes>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.junit.platform</groupId>
                        <artifactId>junit-platform-surefire-provider</artifactId>
                        <version>${junit.platform.version}</version>
                    </dependency>
                </dependencies>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <!-- == PROFILES ================================================= -->

    <profiles>
        <profile>
            <id>develop</id>

            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>

            <properties>
                <build.profile.id>develop</build.profile.id>
                <skip.unit.tests>false</skip.unit.tests>
                <skip.integration.tests>true</skip.integration.tests>
            </properties>
        </profile>

        <profile>
            <!-- see https://www.petrikainulainen.net/programming/maven/integration-testing-with-maven/ -->
            <id>integration-test</id>

            <properties>
                <build.profile.id>integration-tests</build.profile.id>
                <skip.unit.tests>true</skip.unit.tests>
                <skip.integration.tests>false</skip.integration.tests>
            </properties>

            <build>
                <plugins>
                    <!-- Adding source and resource directories for integration tests -->
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>build-helper-maven-plugin</artifactId>
                        <version>${maven.build.helper.version}</version>
                        <executions>
                            <execution>
                                <id>add-integration-test-sources</id>
                                <phase>generate-test-sources</phase>
                                <goals>
                                    <goal>add-test-source</goal>
                                </goals>
                                <configuration>
                                    <sources>
                                        <source>src/integration-test/java</source>
                                    </sources>
                                </configuration>
                            </execution>
                            <execution>
                                <id>add-integration-test-resources</id>
                                <phase>generate-test-resources</phase>
                                <goals>
                                    <goal>add-test-resource</goal>
                                </goals>
                                <configuration>
                                    <resources>
                                        <resource>
                                            <filtering>true</filtering>
                                            <directory>src/integration-test/resources</directory>
                                        </resource>
                                    </resources>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>

        <profile>
            <id>acceptance-test</id>

            <properties>
                <build.profile.id>acceptance-tests</build.profile.id>
                <skip.unit.tests>true</skip.unit.tests>
                <skip.integration.tests>false</skip.integration.tests>
            </properties>

            <build>
                <plugins>
                    <!-- Adding source and resource directories for acceptance tests -->
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>build-helper-maven-plugin</artifactId>
                        <version>${maven.build.helper.version}</version>
                        <executions>
                            <execution>
                                <id>add-acceptance-test-sources</id>
                                <phase>generate-test-sources</phase>
                                <goals>
                                    <goal>add-test-source</goal>
                                </goals>
                                <configuration>
                                    <sources>
                                        <source>src/acceptance-test/java</source>
                                    </sources>
                                </configuration>
                            </execution>
                            <execution>
                                <id>add-acceptance-test-resources</id>
                                <phase>generate-test-resources</phase>
                                <goals>
                                    <goal>add-test-resource</goal>
                                </goals>
                                <configuration>
                                    <resources>
                                        <resource>
                                            <filtering>true</filtering>
                                            <directory>src/acceptance-test/resources</directory>
                                        </resource>
                                    </resources>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <!-- == Repositories ================================================= -->
    <repositories>
        <repository>
            <id>Codehaus Mojo</id>
            <name>Codehaus Mojo</name>
            <url>https://nexus.codehaus.org/content/repositories/releases/</url>
        </repository>
    </repositories>


</project>
